--- a/imgur/imgur/Controls/TabHeaderFill.xaml
+++ b/imgur/imgur/Controls/TabHeaderFill.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="imgur.Controls.TabHeaderFill"
+    x:Class="Imgur.Controls.TabHeaderFill"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:XAMINControls.Controls"
