--- a/imgur/imgur/View/MainList.xaml
+++ b/imgur/imgur/View/MainList.xaml
@@ -1,13 +1,14 @@
 ﻿<Page
-    x:Class="imgur.MainList"
+    x:Class="Imgur.MainList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:imgur"
+    xmlns:local="using:Imgur"
+    xmlns:controls="using:Imgur.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Page.Resources>
-        <Storyboard x:ConnectionId='1' x:Name="ShowTopics">
+        <Storyboard x:Name="ShowTopics">
             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="topicContainer">
                 <DiscreteObjectKeyFrame KeyTime="0">
                     <DiscreteObjectKeyFrame.Value>
@@ -36,7 +37,7 @@
                 </DoubleAnimation.EasingFunction>
             </DoubleAnimation>
         </Storyboard>
-        <Storyboard x:ConnectionId='2' x:Name="HideTopics">
+        <Storyboard x:Name="HideTopics">
             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="topicContainer">
                 <DiscreteObjectKeyFrame KeyTime="0:0:1">
                     <DiscreteObjectKeyFrame.Value>
@@ -71,7 +72,7 @@
         <Grid.Clip>
             <RectangleGeometry Rect="0,0,6666,6666"/>
         </Grid.Clip>
-        <local:MyGridView x:ConnectionId='3' x:Name="mailList"                                                                                 Margin="5,0,0,0" RenderTransformOrigin="0.5,0.5">
+        <controls:MyGridView x:Name="mailList" SelectionChanged="mailList_SelectionChanged" SizeChanged="mailList_SizeChanged" Margin="5,0,0,0" RenderTransformOrigin="0.5,0.5">
             <GridView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <VariableSizedWrapGrid Orientation="Horizontal" ItemHeight="20" ItemWidth="160"/>
@@ -114,15 +115,15 @@
                     </Grid>
                 </DataTemplate>
             </GridView.ItemTemplate>
-        </local:MyGridView>
-        <Grid x:ConnectionId='4' x:Name="topicContainer" Visibility="Collapsed" Background="#FF191919" RenderTransformOrigin="0.5,0.5">
+        </controls:MyGridView>
+        <Grid x:Name="topicContainer" Visibility="Collapsed" Background="#FF191919" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform/>
             </Grid.RenderTransform>
-            <GridView x:ConnectionId='5' SelectionMode="None" x:Name="topicGrid" Margin="5,0,0,0"                                    >
+            <GridView SelectionMode="None" x:Name="topicGrid" Margin="5,0,0,0" SizeChanged="topicGrid_SizeChanged">
                 <GridView.ItemTemplate>
                     <DataTemplate>
-                        <Grid x:ConnectionId='6' Tag="{Binding index}" Padding="2" MinHeight="100" MinWidth="100" MaxHeight="200" MaxWidth="200"                      Background="#00000000">
+                        <Grid Tag="{Binding index}" Padding="2" MinHeight="100" MinWidth="100" MaxHeight="200" MaxWidth="200" Tapped="Grid_Tapped" Background="#00000000">
                             <Grid IsHitTestVisible="False" Background="#FF222222"/>
                             <Image IsHitTestVisible="False" DataContext="{Binding Path=topPost}" Source="{Binding Path=thumbnail}" Opacity="0.3" Stretch="UniformToFill"/>
                             <Grid IsHitTestVisible="False" Visibility="{Binding selected}" Background="#FF3BAA42" Opacity="0.8"/>
@@ -137,4 +138,3 @@
         </Grid>
     </Grid>
 </Page>
-
