--- a/imgur/imgur/View/MainPage.xaml
+++ b/imgur/imgur/View/MainPage.xaml
@@ -1,11 +1,12 @@
 ﻿<Page
-    x:Class="imgur.MainPage"
+    x:Class="Imgur.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:imgur"
+    xmlns:local="using:Imgur"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding Source={StaticResource viewModelLocator}, Path=MainViewModel}">
     <Page.Resources>
         <Storyboard x:Name="openLinkAnimation">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="openLink">
@@ -126,60 +127,50 @@
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <SplitView x:Name="hamburger" PaneBackground="#FF303030" OpenPaneLength="300">
-            <SplitView.Pane>
-                <ScrollViewer>
-                    <StackPanel>
-                        <Grid Height="200">
-                            <Grid.Background>
-                                <ImageBrush Stretch="UniformToFill" ImageSource="Assets/menu_header_image.png"/>
-                            </Grid.Background>
-                            <TextBlock Text="Sing in" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="20,0,0,20" FontSize="20" Foreground="White"/>
-                            <Image Source="Assets/imgurLogo.png" Height="40" VerticalAlignment="Top" Margin="0,10,0,0"/>
-                        </Grid>
-                    </StackPanel>
-                </ScrollViewer>
-            </SplitView.Pane>
-            <SplitView.Content>
-                <Grid Background="#FF2B2B2B">
-                    <Frame x:Name="frame" Margin="0,60,0,0" Navigated="frame_Navigated"/>
-                    <Grid Height="60" VerticalAlignment="Top">
-                        <Grid Background="#33000000" x:Name="mainListCommands" Visibility="Collapsed">
-                            <Button x:Name="categoryButton" HorizontalAlignment="Left" VerticalAlignment="Stretch"  Background="{x:Null}" Foreground="White" Margin="10,0,0,0" Click="categoryButton_Click" Padding="8,4,20,4">
-                                <StackPanel Orientation="Horizontal" BorderThickness="0,0,40,0">
-                                    <TextBlock Text="Most Viral" FontSize="16"/>
-                                    <FontIcon Glyph="&#xE011;" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center"/>
-                                </StackPanel>
+
+        <Grid Background="#FF2B2B2B">
+            <Frame x:Name="frame" Margin="0,60,0,0"/>
+            <Grid Height="60" VerticalAlignment="Top">
+                <Grid Background="#33000000" x:Name="mainListCommands" Visibility="Collapsed">
+                    <Button 
+                        x:Name="categoryButton" 
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Stretch"
+                        Background="{x:Null}"
+                        Foreground="White"
+                        Margin="10,0,0,0" Padding="8,4,20,4">
+                        <StackPanel Orientation="Horizontal" BorderThickness="0,0,40,0">
+                            <TextBlock Text="Most Viral" FontSize="16"/>
+                            <FontIcon Glyph="&#xE011;" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </Button>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
+                        <ListBoxItem Padding="0">
+                            <Button Background="{x:Null}" Padding="12,0" Height="60">
+                                <Image Source="Assets/ic_action_search.png" Width="25"/>
                             </Button>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
-                                <ListBoxItem Padding="0">
-                                    <Button Background="{x:Null}" Padding="12,0" Height="60">
-                                        <Image Source="Assets/ic_action_search.png" Width="25"/>
-                                    </Button>
-                                </ListBoxItem>
-                                <ListBoxItem Padding="0">
-                                    <Button Background="{x:Null}" Padding="12,0" Height="60">
-                                        <Button.Flyout>
-                                            <MenuFlyout>
-                                                <MenuFlyoutItem Tag="0" Text="Popular" Click="ChangeSort"/>
-                                                <MenuFlyoutItem Tag="1" Text="Newest"  Click="ChangeSort"/>
-                                            </MenuFlyout>
-                                        </Button.Flyout>
-                                        <Image Source="Assets/ic_sort_white_24dp.png" Width="25"/>
-                                    </Button>
-                                </ListBoxItem>
-                            </StackPanel>
-                        </Grid>
-                        <Grid x:Name="postDetailCommands" Margin="0,0,0,0" Visibility="Collapsed">
-                            <Button Background="#00000000" Padding="12,0" Height="60" Width="60" Click="Back_Click">
-                                <SymbolIcon Foreground="#FFBBBBBB" Symbol="Back"/>
-                            </Button>                            
-                        </Grid>
-                    </Grid>
-                    <ProgressRing x:Name="progRing" Foreground="#FF85BF25"/>
+                        </ListBoxItem>
+                        <ListBoxItem Padding="0">
+                            <Button Background="{x:Null}" Padding="12,0" Height="60">
+                                <Button.Flyout>
+                                    <MenuFlyout>
+                                        <MenuFlyoutItem Tag="0" Text="Popular"/>
+                                        <MenuFlyoutItem Tag="1" Text="Newest" />
+                                    </MenuFlyout>
+                                </Button.Flyout>
+                                <Image Source="Assets/ic_sort_white_24dp.png" Width="25"/>
+                            </Button>
+                        </ListBoxItem>
+                    </StackPanel>
                 </Grid>
-            </SplitView.Content>
-        </SplitView>
+                <Grid x:Name="postDetailCommands" Margin="0,0,0,0" Visibility="Collapsed">
+                    <Button Background="#00000000" Padding="12,0" Height="60" Width="60">
+                        <SymbolIcon Foreground="#FFBBBBBB" Symbol="Back"/>
+                    </Button>
+                </Grid>
+            </Grid>
+            <ProgressRing x:Name="progRing" IsActive="{Binding IsBusy}" Foreground="#FF85BF25"/>
+        </Grid>
         <Grid x:Name="openLink" Visibility="Collapsed" Background="#7F000000">
             <Grid.RowDefinitions>
                 <RowDefinition Height="27*"/>
@@ -202,14 +193,14 @@
                     <Grid.RenderTransform>
                         <CompositeTransform/>
                     </Grid.RenderTransform>
-                    <Ellipse Fill="#FF2E2E2E" Tapped="OpenWithEdge"/>
+                    <Ellipse Fill="#FF2E2E2E" />
                     <SymbolIcon IsHitTestVisible="False" Foreground="White" Symbol="Globe"/>
                 </Grid>
                 <Grid x:Name="grid2" Width="40" Height="40" Margin="20,0,0,0" RenderTransformOrigin="0.5,0.5">
                     <Grid.RenderTransform>
                         <CompositeTransform/>
                     </Grid.RenderTransform>
-                    <Ellipse Fill="#FF2E2E2E" Tapped="CloseLink_Tap"/>
+                    <Ellipse Fill="#FF2E2E2E" />
                     <SymbolIcon IsHitTestVisible="False" Foreground="White" Symbol="Cancel"/>
                 </Grid>
             </StackPanel>
