--- a/imgur/imgur/View/PostDetail.xaml
+++ b/imgur/imgur/View/PostDetail.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="imgur.PostDetail"
+    x:Class="Imgur.PostDetail"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:imgur"
+    xmlns:local="using:Imgur"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
