--- a/imgur/imgur/View/UserProfile.xaml
+++ b/imgur/imgur/View/UserProfile.xaml
@@ -1,11 +1,11 @@
 ﻿<Page
-    x:Class="imgur.UserProfile"
+    x:Class="Imgur.UserProfile"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:imgur"
+    xmlns:local="using:Imgur"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:imgur.Controls"
+    xmlns:controls="using:Imgur.Controls"
     mc:Ignorable="d">
     <Page.Resources>
         <Storyboard x:Name="Animation">
