--- a/imgur/imgur/App.xaml
+++ b/imgur/imgur/App.xaml
@@ -1,8 +1,13 @@
 ﻿<Application
-    x:Class="imgur.App"
+    x:Class="Imgur.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:imgur"
+    xmlns:local="using:Imgur"
+    xmlns:viewModels="using:Imgur.ViewModels"
     RequestedTheme="Light">
+
+    <Application.Resources>
+        <viewModels:ViewModelLocator x:Key="viewModelLocator"/>
+    </Application.Resources>
 
 </Application>
