--- a/imgur/imgur/View/MainList.xaml
+++ b/imgur/imgur/View/MainList.xaml
@@ -3,11 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Imgur"
+    xmlns:viewModels="using:Imgur.ViewModels"
     xmlns:controls="using:Imgur.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    DataContext="{Binding Source={StaticResource viewModelLocator}, Path=MainListViewModel}">
+    d:DataContext="{d:DesignInstance viewModels:MainListViewModel}">
+
     <Page.Resources>
         <Storyboard x:Name="ShowTopics">
             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="topicContainer">
@@ -70,16 +72,15 @@
     </Page.Resources>
 
     <Grid Background="#FF191919">
-        <Grid.Clip>
-            <RectangleGeometry Rect="0,0,6666,6666"/>
-        </Grid.Clip>
         <controls:MyGridView
-            Margin="5,0,0,0"
+            SizeChanged="mailList_SizeChanged"
+            Margin="5,60,0,0"
             ItemsSource="{Binding Posts}"
             RenderTransformOrigin="0.5,0.5">
             <GridView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <VariableSizedWrapGrid Orientation="Horizontal" ItemHeight="20" ItemWidth="160"/>
+                    <VariableSizedWrapGrid
+                        Orientation="Horizontal" ItemHeight="20" ItemWidth="160"/>
                 </ItemsPanelTemplate>
             </GridView.ItemsPanel>
             <GridView.RenderTransform>
@@ -88,21 +89,24 @@
             <GridView.ItemTemplate>
                 <DataTemplate>
                     <Grid Padding="2">
-                        <Grid BorderThickness="2" CornerRadius="2">
+                        <Grid BorderThickness="2" CornerRadius="1">
                             <Grid.BorderBrush>
                                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                     <GradientStop Color="#002C2C2C" Offset="0.385"/>
-                                    <GradientStop Color="#FF2C2C2C" Offset="0.697"/>
+                                    <GradientStop Color="#FF474A51" Offset="0.697"/>
                                 </LinearGradientBrush>
                             </Grid.BorderBrush>
                             <Image Stretch="UniformToFill" Source="Assets/ic_gallery_placeholder.png"/>
-                            <Image Stretch="UniformToFill" 
+                            <Image Stretch="UniformToFill" Margin="-1,0"
                                Source="{Binding Thumbnail}"/>
-                            <Grid Height="Auto" VerticalAlignment="Bottom" Background="#FF2B2B2B">
+                            <Grid Height="Auto" VerticalAlignment="Bottom" Background="#FF474A51" RenderTransformOrigin="0.5,0.5">
+                                <Grid.RenderTransform>
+                                    <CompositeTransform ScaleX="1.01" ScaleY="1.01"/>
+                                </Grid.RenderTransform>
                                 <StackPanel VerticalAlignment="Bottom" Margin="10">
                                     <TextBlock TextTrimming="WordEllipsis" MaxLines="2" TextWrapping="Wrap" VerticalAlignment="Center"  Text="{Binding Title}" Foreground="White" Margin="0,0,0,5"/>
                                     <StackPanel Orientation="Horizontal" Height="20">
-                                        <Image Source="Assets/upvote_meta.png" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="10"/>
+                                        <Image Source="ms-appx:///Assets/post_upvote.png" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="10"/>
                                         <TextBlock Margin="5,0,0,0" Text="{Binding Upvotes}" Foreground="#FF6C6C6C"/>
                                         <TextBlock Margin="5,0,0,0" Text="Points" Foreground="#FF6C6C6C"/>
                                         <!--<Image Margin="15,0,0,0" Source="Assets/ic_gallery_meta_comments.png" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="10"/>
@@ -120,7 +124,7 @@
                 </DataTemplate>
             </GridView.ItemTemplate>
         </controls:MyGridView>
-        <Grid x:Name="topicContainer" Visibility="Collapsed" Background="#FF191919" RenderTransformOrigin="0.5,0.5">
+        <!--<Grid x:Name="topicContainer" Visibility="Visible" Background="#FF191919" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform/>
             </Grid.RenderTransform>
@@ -141,6 +145,48 @@
                     </DataTemplate>
                 </GridView.ItemTemplate>
             </GridView>
+        </Grid>-->
+        <Grid Background="#FF2E3035"
+              Visibility="{Binding MainListCommandsVisibility}"
+              VerticalAlignment="Top"
+              BorderThickness="0,0,0,2"
+              BorderBrush="#33000000">
+            <ComboBox 
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Stretch"
+                        Background="{x:Null}"
+                        Foreground="White"
+                        SelectedItem="{Binding CurrentSection}"
+                        Margin="10,0,0,0" Padding="8,4,20,4">
+                <StackPanel Orientation="Horizontal" BorderThickness="0,0,40,0">
+                    <TextBlock Text="Most Viral" FontSize="16"/>
+                    <FontIcon Glyph="&#xE011;" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center"/>
+                </StackPanel>
+            </ComboBox>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
+                <ListBoxItem Padding="0">
+                    <Button Background="{x:Null}" Padding="12,0" Height="60">
+                        <Image Source="ms-appx:///Assets/ic_action_search.png" Width="25"/>
+                    </Button>
+                </ListBoxItem>
+                <ListBoxItem Padding="0">
+                    <Button Background="{x:Null}" Padding="12,0" Height="60">
+                        <Button.Flyout>
+                            <ListPickerFlyout
+                                ItemsSource="{Binding SortTypes}"
+                                SelectedValue="{Binding CurrenSort, Mode=TwoWay}"
+                                Placement="Top" SelectedIndex="-1">
+                                <ListPickerFlyout.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Name}"/>
+                                    </DataTemplate>
+                                </ListPickerFlyout.ItemTemplate>
+                            </ListPickerFlyout>
+                        </Button.Flyout>
+                        <Image Source="ms-appx:///Assets/ic_sort_white_24dp.png" Width="25"/>
+                    </Button>
+                </ListBoxItem>
+            </StackPanel>
         </Grid>
     </Grid>
 </Page>
