--- a/imgur/imgur/View/MainPage.xaml
+++ b/imgur/imgur/View/MainPage.xaml
@@ -2,11 +2,10 @@
     x:Class="Imgur.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Imgur"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    DataContext="{Binding Source={StaticResource viewModelLocator}, Path=MainViewModel}">
+    DataContext="{Binding Source={StaticResource viewModelLocator}, Path=MainViewModel}" Background="#FF212124">
     <Page.Resources>
         <Storyboard x:Name="openLinkAnimation">
             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="openLink">
@@ -126,15 +125,37 @@
         </Storyboard>
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="#FF212124">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="80"/>
+        </Grid.RowDefinitions>
 
-        <Grid Background="#FF2B2B2B">
-            <Frame x:Name="frame" Content="{Binding CurrentPage}" Margin="{Binding PageMargin}"/>
-            <Grid Height="60" VerticalAlignment="Top">
-                <Grid Background="#33000000" x:Name="mainListCommands"
+        <Frame Grid.Row="0" Content="{Binding SelectedTab.Page}"/>
+        <Grid Grid.Row="1" Background="#FF2E3035">
+            <ListBox
+                    Background="{x:Null}"
+                    Foreground="#FF747A84"
+                    ItemsSource="{Binding Tabs}"
+                    SelectedItem="{Binding SelectedTab, Mode=TwoWay}"
+                    HorizontalContentAlignment="Stretch" HorizontalAlignment="Center">
+                <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <FontIcon Width="72"
+                                      Glyph="{Binding Icon}"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+            <!--<Grid Height="60" VerticalAlignment="Top">
+                <Grid Background="#33000000"
                       Visibility="{Binding MainListCommandsVisibility}">
                     <ComboBox 
-                        x:Name="categoryButton" 
                         HorizontalAlignment="Left"
                         VerticalAlignment="Stretch"
                         Background="{x:Null}"
@@ -165,16 +186,15 @@
                         </ListBoxItem>
                     </StackPanel>
                 </Grid>
-                <Grid x:Name="postDetailCommands"
+                <Grid
                      Visibility="{Binding PostDetailCommandsVisibility}"
                      Margin="0,0,0,0">
                     <Button Background="#00000000" Padding="12,0" Height="60" Width="60">
                         <SymbolIcon Foreground="#FFBBBBBB" Symbol="Back"/>
                     </Button>
                 </Grid>
-            </Grid>
-            <ProgressRing x:Name="progRing" IsActive="{Binding IsBusy}" Foreground="#FF85BF25"/>
-        </Grid>
+            </Grid>-->
+        <ProgressRing IsActive="{Binding IsBusy}" Foreground="#FF85BF25"/>
         <Grid x:Name="openLink" Visibility="Collapsed" Background="#7F000000">
             <Grid.RowDefinitions>
                 <RowDefinition Height="27*"/>
