--- a/imgur/imgur/View/MainList.xaml
+++ b/imgur/imgur/View/MainList.xaml
@@ -9,6 +9,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance viewModels:MainListViewModel}">
+    <Page.Transitions>
+        <TransitionCollection>
+            <EdgeUIThemeTransition Edge="Left" />
+        </TransitionCollection>
+    </Page.Transitions>
 
     <Page.Resources>
         <Storyboard x:Name="ShowTopics">
@@ -69,24 +74,48 @@
                 </DoubleAnimation.EasingFunction>
             </DoubleAnimation>
         </Storyboard>
+        <Storyboard x:Name="HideNavBar">
+            <DoubleAnimation Duration="0:0:0.3" To="-90" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="grid" d:IsOptimized="True">
+                <DoubleAnimation.EasingFunction>
+                    <SineEase EasingMode="EaseInOut"/>
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+        </Storyboard>
+        <Storyboard x:Name="ShowNavBar">
+            <DoubleAnimation Duration="0:0:0.3" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="grid" d:IsOptimized="True">
+                <DoubleAnimation.EasingFunction>
+                    <SineEase EasingMode="EaseInOut"/>
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+        </Storyboard>
     </Page.Resources>
 
     <Grid Background="#FF191919">
         <controls:MyGridView
+            x:Name="PostGridView"
             SizeChanged="mailList_SizeChanged"
-            Margin="5,60,0,0"
+            Margin="5,0,0,0"
             ItemsSource="{Binding Posts}"
-            RenderTransformOrigin="0.5,0.5">
-            <GridView.ItemsPanel>
+            SelectedValue="{Binding SelectedPost, Mode=TwoWay}"
+            RenderTransformOrigin="0.5,0.5" Padding="0,65,0,10">
+            <controls:MyGridView.ItemContainerTransitions>
+                <TransitionCollection>
+                    <EntranceThemeTransition/>
+                    <RepositionThemeTransition/>
+                </TransitionCollection>
+            </controls:MyGridView.ItemContainerTransitions>
+            <controls:MyGridView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <VariableSizedWrapGrid
-                        Orientation="Horizontal" ItemHeight="20" ItemWidth="160"/>
+                        Orientation="Horizontal"
+                        ItemHeight="20"
+                        ItemWidth="160"/>
                 </ItemsPanelTemplate>
-            </GridView.ItemsPanel>
-            <GridView.RenderTransform>
+            </controls:MyGridView.ItemsPanel>
+            <controls:MyGridView.RenderTransform>
                 <CompositeTransform/>
-            </GridView.RenderTransform>
-            <GridView.ItemTemplate>
+            </controls:MyGridView.RenderTransform>
+            <controls:MyGridView.ItemTemplate>
                 <DataTemplate>
                     <Grid Padding="2">
                         <Grid BorderThickness="2" CornerRadius="1">
@@ -122,7 +151,7 @@
                         </Grid>
                     </Grid>
                 </DataTemplate>
-            </GridView.ItemTemplate>
+            </controls:MyGridView.ItemTemplate>
         </controls:MyGridView>
         <!--<Grid x:Name="topicContainer" Visibility="Visible" Background="#FF191919" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
@@ -146,23 +175,26 @@
                 </GridView.ItemTemplate>
             </GridView>
         </Grid>-->
-        <Grid Background="#FF2E3035"
+        <Grid x:Name="grid" Background="#FF2E3035"
               Visibility="{Binding MainListCommandsVisibility}"
               VerticalAlignment="Top"
               BorderThickness="0,0,0,2"
-              BorderBrush="#33000000">
-            <ComboBox 
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Stretch"
-                        Background="{x:Null}"
-                        Foreground="White"
-                        SelectedItem="{Binding CurrentSection}"
-                        Margin="10,0,0,0" Padding="8,4,20,4">
-                <StackPanel Orientation="Horizontal" BorderThickness="0,0,40,0">
-                    <TextBlock Text="Most Viral" FontSize="16"/>
-                    <FontIcon Glyph="&#xE011;" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center"/>
-                </StackPanel>
-            </ComboBox>
+              BorderBrush="#33000000" Height="62" RenderTransformOrigin="0.5,0.5">
+            <Grid.RenderTransform>
+                <CompositeTransform/>
+            </Grid.RenderTransform>
+            <!--<ComboBox
+                     HorizontalAlignment="Left"
+                     VerticalAlignment="Stretch"
+                     Background="{x:Null}"
+                     Foreground="White"
+                     SelectedItem="{Binding CurrentSection}"
+                     Margin="10,0,0,0" Padding="8,4,20,4">-->
+            <StackPanel Orientation="Horizontal" BorderThickness="20,0,0,0" VerticalAlignment="Center">
+                <TextBlock Text="Most Viral" FontSize="16" Foreground="White"/>
+                <FontIcon Glyph="&#xE011;" FontSize="14" Margin="10,0,0,0" VerticalAlignment="Center" Foreground="White"/>
+            </StackPanel>
+            <!--</ComboBox>-->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
                 <ListBoxItem Padding="0">
                     <Button Background="{x:Null}" Padding="12,0" Height="60">
@@ -188,5 +220,7 @@
                 </ListBoxItem>
             </StackPanel>
         </Grid>
+
+        <Button Command="{Binding RefreshCommand}" Content="Swoosh" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
     </Grid>
 </Page>
